--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ body {
 .about-section {
   display: flex;
   flex-direction: column;
-  margin: 0 10vw;
+  margin: 0 15vw;
 }
 
 @font-face {
@@ -34,6 +34,7 @@ body {
 .font-face-gm {
   font-family: "Victorianna";
   font-size: 2em;
+  color: blue;
 }
 
 p {
@@ -44,7 +45,7 @@ p {
 
 .rotate {
   animation: rotating 3s infinite linear;
-  color: red;
+  color: blue;
   font-size: larger;
 }
 
