--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@ body {
   &:hover {
     transform: scale(0.9);
     transition: ease-in-out 0.2s;
+    border-bottom: 0.3px solid black;
   }
 }
 
@@ -56,4 +57,8 @@ p {
   to {
     transform: transform(359deg);
   }
+}
+
+#root > div > div.project-section > div:nth-child(5) {
+  margin-bottom: 5%;
 }
