--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,8 @@ body {
   transform: scale(0.9);
   transition: ease-in-out 0.2s;
   border-bottom: 0.3px solid black;
+  background-color: blue;
+  color: white;
 }
 
 .about-section {
