--- a/src/styles.css
+++ b/src/styles.css
@@ -29,6 +29,8 @@ body {
   font-family: "Victorianna";
   font-size: 2em;
   color: blue;
+  -webkit-margin-after: 0.2em;
+          margin-block-end: 0.2em;
 }
 
 p {
@@ -72,7 +74,7 @@ p {
   font-family: roboto-mono, monospace;
   font-weight: 200;
   font-style: normal;
-  padding: 5px;
+  padding: 8px;
   width: 75%;
   cursor: pointer;
   border-width: 0.1px;
