--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,7 @@ body {
   font-family: "Victorianna";
   font-size: 2em;
   color: blue;
+  margin-block-end: 0.2em;
 }
 
 p {
@@ -71,7 +72,7 @@ p {
   font-family: roboto-mono, monospace;
   font-weight: 200;
   font-style: normal;
-  padding: 5px;
+  padding: 8px;
   width: 75%;
   cursor: pointer;
   border-width: 0.1px;
