make card button white on hover and remove border

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,8 +69,8 @@ p {
 
 .card-button {
   transition: ease-in-out 0.2s;
-  background-color: "aliceblue";
-  border: 1px 1px 0px solid black;
+  background: "aliceblue";
+  border: none;
   font-family: roboto-mono, monospace;
   font-weight: 200;
   font-style: normal;
@@ -80,12 +80,9 @@ p {
   border-width: 0.1px;
   background: aliceblue;
   border-radius: 50%;
-  background: none;
 }
 .card-button:hover {
-  background: aliceblue;
+  background: white;
   font-size: medium;
-  border: 5px solid transparent;
-  -o-border-image: url("./img/circle.png");
-     border-image: url("./img/circle.png");
+  border: 0.5px solid black;
 }/*# sourceMappingURL=styles.css.map */
