--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,9 @@ body {
 .about-section {
   display: flex;
   flex-direction: column;
-  margin: 0 15vw;
+  margin: 0 20vw;
+  align-items: center;
+  // max-width: 600px;
 }
 
 @font-face {
@@ -85,3 +87,10 @@ p {
     border: 0.5px solid black;
   }
 }
+
+// .content {
+//   display: flex;
+//   flex-direction: column;
+//   max-width: 700px;
+//   align-items: center;
+// }
