--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ body {
 
 .font-face-gm {
   font-family: "Victorianna";
-  font-size: 2em;
+  font-size: 3em;
   color: blue;
   margin-block-end: 0.2em;
 }
@@ -88,9 +88,7 @@ p {
   }
 }
 
-// .content {
-//   display: flex;
-//   flex-direction: column;
-//   max-width: 700px;
-//   align-items: center;
-// }
+#greeting {
+  font-size: 4em;
+  font-weight: 700;
+}
