--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,7 +63,7 @@ p {
   }
 }
 
-#root > div > div.project-section > div:nth-child(5) {
+#root > div > div.content > div.project-section > div:nth-child(6) {
   margin-bottom: 5%;
 }
 
