fix size of button text

--- a/src/styles.css
+++ b/src/styles.css
@@ -75,6 +75,7 @@ p {
 
 .card-button {
   transition: ease-in-out 0.2s;
+  color: black;
   background: "aliceblue";
   border: none;
   font-family: roboto-mono, monospace;
@@ -86,6 +87,7 @@ p {
   border-width: 0.1px;
   background: aliceblue;
   border-radius: 50%;
+  font-size: 1.4em;
 }
 .card-button:hover {
   background: white;
