--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -14,4 +14,10 @@
 .navButton:hover {
   transform: translateY(2.4px);
   transition: ease-in-out 0.2s;
+}
+@media screen and (max-width: 450px) {
+  .navButton {
+    font-size: 16px;
+    color: black;
+  }
 }/*# sourceMappingURL=nav.css.map */
