--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -18,4 +18,9 @@
     transition: ease-in-out 0.2s;
     // border-bottom: 0.3px solid black;
   }
+
+  @media screen and (max-width: 450px) {
+    font-size: 16px;
+    color: black;
+  }
 }
