--- a/src/styles.css
+++ b/src/styles.css
@@ -9,17 +9,12 @@ body {
   font-style: normal;
 }
 
-.navButton:hover {
-  transform: scale(0.9);
-  transition: ease-in-out 0.2s;
-  border-bottom: 0.3px solid black;
-}
-
 .about-section {
   display: flex;
   flex-direction: column;
   margin: 0 20vw;
   align-items: center;
+  scroll-margin-top: 10px;
 }
 @media screen and (max-width: 450px) {
   .about-section {
