change size of logo on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -103,3 +103,10 @@ p {
     width: 75vmin;
   }
 }
+
+#name {
+  @media screen and (max-width: 450px) {
+    font-size: 2em;
+    margin-right: 10px;
+  }
+}
