--- a/src/styles.css
+++ b/src/styles.css
@@ -106,4 +106,11 @@ p {
   .card {
     width: 75vmin;
   }
+}
+
+@media screen and (max-width: 450px) {
+  #name {
+    font-size: 2em;
+    margin-right: 10px;
+  }
 }/*# sourceMappingURL=styles.css.map */
