scroll to top on icon click

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,15 @@ body {
           margin-block-end: 0.2em;
 }
 
+.home-button {
+  font-family: "Victorianna";
+  font-size: 1em;
+  background-color: white;
+  border: 0px;
+  color: blue;
+  cursor: pointer;
+}
+
 p {
   font-family: roboto-mono, monospace;
   font-weight: 200;
