--- a/src/Components/Art-page/Artpage.css
+++ b/src/Components/Art-page/Artpage.css
@@ -1,34 +1,26 @@
 .ArtPage {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  flex-direction: column;
+  display: flex;
+  gap: 1em;
+  flex-direction: row;
   margin-top: 5%;
   padding-left: 5%;
   padding-right: 5%;
+  padding-bottom: 5%;
+  justify-content: center;
 }
-.ArtPage .card {
-  width: 45vw;
+
+.lr {
   display: flex;
   flex-direction: column;
+  gap: 1em;
 }
-.ArtPage .button-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 5%;
-  border: 1px solid purple;
-}
-.ArtPage .card-img {
-  -o-object-fit: contain;
-     object-fit: contain;
-  width: 100%;
-}
-.ArtPage .img-button {
-  width: 12%;
-  border: 0px;
-  padding: 0px;
-  cursor: pointer;
-}
-.ArtPage .img-button img {
-  width: 100%;
+
+@media only screen and (max-width: 600px) {
+  .ArtPage {
+    flex-direction: column;
+    align-items: center;
+  }
+  .lr {
+    width: 80vw;
+  }
 }/*# sourceMappingURL=Artpage.css.map */
