--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -15,9 +15,8 @@
   transform: translateY(2.4px);
   transition: ease-in-out 0.2s;
 }
-@media screen and (max-width: 450px) {
-  .navButton {
-    font-size: 16px;
-    color: black;
+@media only screen and (max-width: 600px) {
+  .navButton .navButton {
+    font-size: 0.6rem;
   }
 }/*# sourceMappingURL=nav.css.map */
