--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -1,10 +1,34 @@
-.navButton {
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100vw;
+  padding-left: 2%;
+  padding-right: 2%;
+  font-size: 1.5em;
+  border-bottom: 1px solid black;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  gap: 10px;
+
+  .button-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    padding-bottom: 1px;
+    gap: 1em;
+  }
+}
+
+.button-wrapper .navButton {
   background: none;
   border: 0;
   border-top: 1px solid black;
   border-left: 1px solid black;
   border-right: 1px solid black;
-  font-size: 28px;
+  font-size: 3vmin;
   font-family: "roboto-mono", monospace;
   font-weight: 300;
   font-style: normal;
@@ -18,10 +42,14 @@
     transition: ease-in-out 0.2s;
     // border-bottom: 0.3px solid black;
   }
+}
 
-  @media only screen and (max-width: 600px) {
-    .navButton {
-      font-size: 0.6rem;
+@media only screen and (max-width: 450px) {
+  .header {
+    gap: 0px;
+
+    .button-wrapper {
+      gap: 0.7em;
     }
   }
 }
