--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -47,6 +47,7 @@
 @media only screen and (max-width: 450px) {
   .header {
     gap: 0px;
+    color: black;
 
     .button-wrapper {
       gap: 0.7em;
