--- a/src/Components/ArtCard/ArtCard.css
+++ b/src/Components/ArtCard/ArtCard.css
@@ -6,8 +6,7 @@
   height: -moz-fit-content;
   height: fit-content;
 }
-
-.button-container {
+.ArtCard .button-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
