--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,10 @@ body {
   font-style: normal;
 }
 
+button {
+  cursor: pointer;
+}
+
 .about-section {
   display: flex;
   flex-direction: column;
