--- a/src/Components/ArtCard/ArtCard.scss
+++ b/src/Components/ArtCard/ArtCard.scss
@@ -3,46 +3,60 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
-
-  .button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 5%;
-    border: 1px solid purple;
-    height: 100%;
-  }
 }
 
-.card-img {
+.active-img {
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  max-height: 90vh;
+  background-color: white;
 }
 
 .active-image-container {
-  // height: 100%;
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   border: 0px;
   padding: 0px;
   cursor: pointer;
+  // border-top: 1px solid purple;
+  border-bottom: 1px solid purple;
 }
 
-.img-button {
-  width: 12%;
-  border: 0px;
-  padding: 0px;
-  cursor: pointer;
+.thumbnail-container {
+  // border: 0.5px solid purple;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 0.5em 0;
+  gap: 2em;
 
-  &:hover {
-    opacity: 80%;
+  button {
+    height: 2.5em;
+    width: 2.5em;
+    border: 0px;
+    padding: 2px;
+    cursor: pointer;
+    border-radius: 100%;
+
+    &:hover {
+      border: 2px solid purple;
+    }
   }
 
   img {
+    height: 100%;
     width: 100%;
+    object-fit: cover;
+    border-radius: 100%;
   }
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  z-index: 100;
 }
 
 @media only screen and (max-width: 600px) {
@@ -53,4 +67,8 @@
   .lr {
     width: 80vw;
   }
+}
+
+.hidden {
+  display: none;
 }
