add carousel to images

--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -6,14 +6,12 @@
   width: 100vw;
   padding-left: 2%;
   padding-right: 2%;
-  padding-top: 2%;
   font-size: 1.5em;
   border-bottom: 1px solid black;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   background-color: white;
-  gap: 10px;
 }
 .header .button-wrapper {
   display: flex;
@@ -21,6 +19,23 @@
   align-items: flex-end;
   padding-bottom: 1px;
   gap: 1em;
+}
+
+.home-button {
+  font-family: "Victorianna";
+  font-size: 3em;
+  border: 0px;
+  color: blue;
+  cursor: pointer;
+  bottom: -22px;
+  position: relative;
+  background: none;
+}
+@media screen and (min-width: 800px) {
+  .home-button {
+    font-size: 4em;
+    padding-right: 0px;
+  }
 }
 
 .button-wrapper .navButton {
@@ -45,8 +60,17 @@
   .header {
     gap: 0px;
     color: black;
+    padding-top: 5px;
   }
   .header .button-wrapper {
-    gap: 0.7em;
+    gap: 5px;
   }
-} /*# sourceMappingURL=nav.css.map */
+  .home-button {
+    font-size: 1.4em;
+    padding-right: 0px;
+    bottom: -8px;
+  }
+  .button-wrapper .navButton {
+    font-size: 4vmin;
+  }
+}/*# sourceMappingURL=nav.css.map */
