--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,20 +43,6 @@ button {
   margin-block-end: 0.2em;
 }
 
-.home-button {
-  font-family: "Victorianna";
-  font-size: 2em;
-  background-color: white;
-  border: 0px;
-  color: blue;
-  cursor: pointer;
-
-  @media screen and (max-width: 450px) {
-    font-size: 1.4em;
-    padding-right: 0px;
-  }
-}
-
 p {
   font-family: roboto-mono, monospace;
   font-weight: 200;
@@ -128,6 +114,17 @@ p {
     margin-right: 10px;
   }
 }
+
+@media screen and (max-width: 450px) {
+  #name {
+    font-size: 2em;
+    margin-right: 10px;
+  }
+  p {
+    font-size: 3.5vmin;
+  }
+}
+
 /* Box sizing rules */
 *,
 *::before,
