--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,18 +108,7 @@ p {
   }
 }
 
-#name {
-  @media screen and (max-width: 450px) {
-    font-size: 2em;
-    margin-right: 10px;
-  }
-}
-
 @media screen and (max-width: 450px) {
-  #name {
-    font-size: 2em;
-    margin-right: 10px;
-  }
   p {
     font-size: 3.5vmin;
   }
@@ -159,7 +148,7 @@ html:focus-within {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  // min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
@@ -198,4 +187,11 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+html,
+body,
+#root,
+.App {
+  height: 100%;
 }
