--- a/src/Components/ArtCard/ArtCard.css
+++ b/src/Components/ArtCard/ArtCard.css
@@ -27,6 +27,7 @@
 }
 
 .thumbnail-container {
+  border: 0.5px solid purple;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -50,12 +51,6 @@
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 100%;
-}
-
-.modal {
-  width: 100vw;
-  height: 100vh;
-  z-index: 100;
 }
 
 @media only screen and (max-width: 600px) {
