--- a/src/Components/ArtCard/ArtCard.scss
+++ b/src/Components/ArtCard/ArtCard.scss
@@ -20,12 +20,11 @@
   border: 0px;
   padding: 0px;
   cursor: pointer;
-  // border-top: 1px solid purple;
   border-bottom: 1px solid purple;
 }
 
 .thumbnail-container {
-  // border: 0.5px solid purple;
+  border: 0.5px solid purple;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -51,12 +50,6 @@
     object-fit: cover;
     border-radius: 100%;
   }
-}
-
-.modal {
-  width: 100vw;
-  height: 100vh;
-  z-index: 100;
 }
 
 @media only screen and (max-width: 600px) {
