--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -3,14 +3,13 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  width: 100vw;
+  width: 100%;
   padding-left: 2%;
   padding-right: 2%;
   font-size: 1.5em;
   border-bottom: 1px solid black;
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
   background-color: white;
 }
 .header .button-wrapper {
@@ -33,7 +32,7 @@
 }
 @media screen and (min-width: 800px) {
   .home-button {
-    font-size: 4em;
+    font-size: 3.3em;
     padding-right: 0px;
   }
 }
@@ -62,6 +61,7 @@
     color: black;
     padding-top: 5px;
     padding-left: 0px;
+    top: -2em;
   }
   .header .button-wrapper {
     gap: 5px;
