fix bug where buttons are blue on mobile for header

--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -74,4 +74,7 @@
   .button-wrapper .navButton {
     font-size: 4vmin;
   }
+  .navButton {
+    color: black;
+  }
 }/*# sourceMappingURL=nav.css.map */
