--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -57,6 +57,7 @@
 
 @media only screen and (max-width: 450px) {
   .header {
+    display: none;
     gap: 0px;
     color: black;
     padding-top: 5px;
