--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -10,7 +10,6 @@
   border-bottom: 1px solid black;
   position: sticky;
   background-color: white;
-  // padding-top: 2%;
 
   .button-wrapper {
     display: flex;
@@ -61,6 +60,7 @@
 
 @media only screen and (max-width: 450px) {
   .header {
+    display: none;
     gap: 0px;
     color: black;
     padding-top: 5px;
