--- a/src/Components/Mobile-Nav/MobileNav.css
+++ b/src/Components/Mobile-Nav/MobileNav.css
@@ -14,11 +14,15 @@
   border: 0;
   border-bottom: 1px solid black;
   padding: 0.8em 0;
+  color: black;
 }
 
 @media only screen and (max-width: 450px) {
   .MobileNav {
     display: flex;
+  }
+  .MobileNav button {
+    color: black;
   }
 }
 .hidden {
@@ -49,7 +53,7 @@
   justify-content: flex-start;
   width: 100%;
   flex-grow: 2;
-  font-size: 1.5em;
+  font-size: 1.8em;
   text-align: left;
   padding-left: 5%;
 }/*# sourceMappingURL=MobileNav.css.map */
