--- a/src/Components/Mobile-Nav/MobileNav.scss
+++ b/src/Components/Mobile-Nav/MobileNav.scss
@@ -13,12 +13,16 @@
     border: 0;
     border-bottom: 1px solid black;
     padding: 0.8em 0;
+    color: black;
   }
 }
 
 @media only screen and (max-width: 450px) {
   .MobileNav {
     display: flex;
+    button {
+      color: black;
+    }
   }
 }
 
@@ -51,7 +55,7 @@
     justify-content: flex-start;
     width: 100%;
     flex-grow: 2;
-    font-size: 1.5em;
+    font-size: 1.8em;
     text-align: left;
     padding-left: 5%;
   }
