--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -5,5 +5,6 @@
 @media only screen and (max-width: 450px) {
   #greeting {
     font-size: 2.8em;
+    font-weight: 900;
   }
 }/*# sourceMappingURL=LandingPage.css.map */
