--- a/src/Components/ArtCard/ArtCard.scss
+++ b/src/Components/ArtCard/ArtCard.scss
@@ -10,6 +10,7 @@
   width: 100%;
   max-height: 90vh;
   background-color: white;
+  animation: fadein 1.2s;
 }
 
 .active-image-container {
@@ -21,6 +22,7 @@
   padding: 0px;
   cursor: pointer;
   border-bottom: 1px solid purple;
+  transition: ease-in 1s;
 }
 
 .thumbnail-container {
@@ -64,4 +66,13 @@
 
 .hidden {
   display: none;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
