--- a/src/Components/ArtCard/ArtCard.css
+++ b/src/Components/ArtCard/ArtCard.css
@@ -15,6 +15,11 @@
   background-color: white;
   -webkit-animation: fadein 1.2s;
           animation: fadein 1.2s;
+  transition: ease-in-out 0.3s;
+}
+.active-img:hover {
+  opacity: 90%;
+  transform: scale(0.99);
 }
 
 .active-image-container {
