--- a/src/Components/ArtCard/ArtCard.css
+++ b/src/Components/ArtCard/ArtCard.css
@@ -6,20 +6,21 @@
   height: -moz-fit-content;
   height: fit-content;
 }
+.ArtCard .active-img:hover {
+  transform: scale(0.99);
+  opacity: 0.89;
+}
 
 .active-img {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  max-height: 90vh;
+  height: 100%;
+  max-width: 800px;
   background-color: white;
   -webkit-animation: fadein 1.2s;
           animation: fadein 1.2s;
   transition: ease-in-out 0.3s;
-}
-.active-img:hover {
-  opacity: 90%;
-  transform: scale(0.99);
 }
 
 .active-image-container {
@@ -69,6 +70,14 @@
     width: 80vw;
   }
 }
+@media only screen and (min-width: 1100px) {
+  .ArtCard {
+    width: 100%;
+  }
+  .lr {
+    width: 80vw;
+  }
+}
 .hidden {
   display: none;
 }
@@ -89,4 +98,8 @@
   to {
     opacity: 1;
   }
+}
+.ArtCard-Modal .active-img :hover {
+  transform: none;
+  opacity: initial;
 }/*# sourceMappingURL=ArtCard.css.map */
