--- a/src/Components/ArtCard/ArtCard.scss
+++ b/src/Components/ArtCard/ArtCard.scss
@@ -3,20 +3,23 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
+
+  .active-img {
+    &:hover {
+      transform: scale(0.99);
+      opacity: 0.89;
+    }
+  }
 }
 
 .active-img {
   object-fit: cover;
   width: 100%;
-  max-height: 90vh;
+  height: 100%;
+  max-width: 800px;
   background-color: white;
   animation: fadein 1.2s;
   transition: ease-in-out 0.3s;
-
-  &:hover {
-    opacity: 90%;
-    transform: scale(0.99);
-  }
 }
 
 .active-image-container {
@@ -70,6 +73,16 @@
   }
 }
 
+@media only screen and (min-width: 1100px) {
+  .ArtCard {
+    width: 100%;
+  }
+
+  .lr {
+    width: 80vw;
+  }
+}
+
 .hidden {
   display: none;
 }
@@ -80,5 +93,12 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+.ArtCard-Modal {
+  .active-img :hover {
+    transform: none;
+    opacity: initial;
   }
 }
