--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,7 +97,11 @@ p {
 }
 
 .italic {
-  font-size: smaller;
+  font-style: italic;
+}
+
+.bold {
+  border-bottom: 1px solid darkgray;
 }
 
 .card {
