--- a/src/styles/nav/nav.css
+++ b/src/styles/nav/nav.css
@@ -24,7 +24,7 @@
   font-family: "Victorianna";
   font-size: 3em;
   border: 0px;
-  color: blue;
+  color: #3c00ff;
   cursor: pointer;
   bottom: -22px;
   position: relative;
