--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -13,13 +13,15 @@
 }
 .Card .card-name {
   font-family: "roboto-mono", "monospace";
-  font-weight: 400;
+  font-weight: 500;
   font-style: normal;
-  padding-top: 10px;
+  padding: 10px 0;
   font-size: larger;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
 .Card .card-text {
-  padding: 0px 50px 15px 50px;
+  padding: 10px 50px 15px 50px;
 }
 .Card .button-container {
   display: flex;
@@ -28,9 +30,6 @@
   align-items: center;
   padding-bottom: 2em;
   gap: 0.5em;
-}
-.Card .card-button {
-  color: black;
 }
 
 @media only screen and (min-width: 1100px) {
