--- a/src/styles.css
+++ b/src/styles.css
@@ -33,14 +33,14 @@ button {
 .font-face-gm {
   font-family: "Victorianna";
   font-size: 3em;
-  color: blue;
+  color: #3c00ff;
   -webkit-margin-after: 0.2em;
           margin-block-end: 0.2em;
 }
 
 p {
   font-family: roboto-mono, monospace;
-  font-weight: 200;
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -74,24 +74,25 @@ p {
 
 .card-button {
   transition: ease-in-out 0.2s;
-  color: black;
-  background: "aliceblue";
   border: none;
   font-family: roboto-mono, monospace;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   padding: 8px;
+  margin-bottom: 5px;
   width: 75%;
   cursor: pointer;
   border-width: 0.1px;
-  background: aliceblue;
+  background-color: #656cbf;
   border-radius: 50%;
   font-size: 1.2em;
+  color: white;
 }
 .card-button:hover {
   background: white;
   font-size: medium;
   border: 0.5px solid black;
+  color: #2c3163;
 }
 
 #greeting {
