--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,13 +39,13 @@ button {
 .font-face-gm {
   font-family: "Victorianna";
   font-size: 3em;
-  color: blue;
+  color: #3c00ff;
   margin-block-end: 0.2em;
 }
 
 p {
   font-family: roboto-mono, monospace;
-  font-weight: 200;
+  font-weight: 300;
   font-style: normal;
 }
 
@@ -70,24 +70,25 @@ p {
 
 .card-button {
   transition: ease-in-out 0.2s;
-  color: black;
-  background: "aliceblue";
   border: none;
   font-family: roboto-mono, monospace;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   padding: 8px;
+  margin-bottom: 5px;
   width: 75%;
   cursor: pointer;
   border-width: 0.1px;
-  background: aliceblue;
+  background-color: #656cbf;
   border-radius: 50%;
   font-size: 1.2em;
+  color: white;
 
   &:hover {
     background: white;
     font-size: medium;
     border: 0.5px solid black;
+    color: #2c3163;
   }
 }
 
