--- a/src/Components/Art-page/Artpage.scss
+++ b/src/Components/Art-page/Artpage.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: 2em;
   flex-direction: row;
-  margin-top: 5%;
+  padding-top: 5%;
   padding-left: 7%;
   padding-right: 7%;
   padding-bottom: 5%;
