--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,7 @@ p {
   border-radius: 50%;
   font-size: 1.2em;
   color: white;
+  box-shadow: inset 0px 1px 0px 5px rgba(45, 57, 133, 0.5215686275);
 }
 .card-button:hover {
   background: white;
@@ -219,5 +220,21 @@ body,
   }
   to {
     opacity: 1;
+  }
+}
+@-webkit-keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
   }
 }/*# sourceMappingURL=styles.css.map */
