--- a/src/Components/Mobile-Nav/MobileNav.css
+++ b/src/Components/Mobile-Nav/MobileNav.css
@@ -42,6 +42,7 @@
   width: 100%;
   align-items: center;
   border-bottom: 1px solid black;
+  box-sizing: border-box;
 }
 .not-expanded button {
   font-size: 1.5em;
@@ -56,4 +57,10 @@
   font-size: 1.8em;
   text-align: left;
   padding-left: 5%;
+}
+.not-expanded div {
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+  padding-right: 10px;
 }/*# sourceMappingURL=MobileNav.css.map */
