--- a/src/Components/Mobile-Nav/MobileNav.scss
+++ b/src/Components/Mobile-Nav/MobileNav.scss
@@ -43,6 +43,7 @@
   width: 100%;
   align-items: center;
   border-bottom: 1px solid black;
+  box-sizing: border-box;
 
   button {
     font-size: 1.5em;
@@ -58,5 +59,12 @@
     font-size: 1.8em;
     text-align: left;
     padding-left: 5%;
+  }
+
+  div {
+    display: flex;
+    flex-direction: row;
+    gap: 5%;
+    padding-right: 10px;
   }
 }
