--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,7 @@ p {
   border-radius: 50%;
   font-size: 1.2em;
   color: white;
+  box-shadow: inset 0px 1px 0px 5px #2d398585;
 
   &:hover {
     background: white;
@@ -203,5 +204,14 @@ body,
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
   }
 }
