--- a/src/styles/dark-mode.scss
+++ b/src/styles/dark-mode.scss
@@ -13,9 +13,15 @@ $offwhite: #ffffffd4;
   .LandingPage {
     background-color: $background;
     color: $light-grey;
+    transition: ease-in-out 0.5s;
 
     span {
       color: $offwhite;
+      transition: ease-in-out 0.5s;
+    }
+
+    .Typewriter > span {
+      color: rgb(235 230 255 / 85%);
     }
   }
 
@@ -40,13 +46,10 @@ $offwhite: #ffffffd4;
     }
   }
 
-  #greeting {
-    color: rgb(106 117 242);
-    // color: $light-purple;
-  }
   .font-face-gm,
   .home-button {
-    color: rgba(145, 153, 245, 0.802);
+    color: rgb(194 199 255 / 80%);
+    transition: ease-in-out 0.5s;
   }
   .home-button {
     color: $light-grey;
@@ -55,8 +58,7 @@ $offwhite: #ffffffd4;
   #about-link {
     color: $offwhite;
   }
-
-  .Card {
+  s .Card {
     border: 1px solid rgb(105 102 107 / 83%);
 
     .card-name {
@@ -66,12 +68,14 @@ $offwhite: #ffffffd4;
   }
 
   .card-button {
-    background-color: rgb(43 38 107);
-    color: $offwhite;
+    background-color: rgba(255, 255, 255, 0.831372549);
+    color: rgb(43, 38, 107);
+    box-shadow: 0px 1px 0px 5px rgb(45 57 133 / 52%);
 
     &:hover {
-      background-color: $offwhite;
-      color: rgb(43 38 107);
+      background-color: rgb(43 38 107);
+      color: $offwhite;
+      box-shadow: 0px 1px 0px 5px rgba(105, 121, 231, 0.77);
     }
   }
 
