--- a/src/Components/ArtCard/ArtCard.scss
+++ b/src/Components/ArtCard/ArtCard.scss
@@ -3,12 +3,10 @@
   display: flex;
   flex-direction: column;
   height: fit-content;
+  transition: ease-in-out 0.3s;
 
-  .active-img {
-    &:hover {
-      transform: scale(0.99);
-      opacity: 0.89;
-    }
+  &:hover {
+    transform: scale(0.99);
   }
 }
 
