--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -54,6 +54,9 @@
   transform: translateY(2.4px);
   transition: ease-in-out 0.2s;
 }
+.button-wrapper .navButton:active {
+  opacity: 60%;
+}
 
 @media only screen and (max-width: 700px) {
   .header {
