--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ p {
   color: white;
   font-size: 1.2em;
   border: 0.5px solid rgba(149, 159, 223, 0.8470588235);
-  background: #2c3163;
+  background: #656adf;
   box-shadow: inset 0px 1px 0px 5px rgba(168, 177, 239, 0.7333333333);
 }
 
