--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,7 +86,7 @@ p {
     color: white;
     font-size: 1.2em;
     border: 0.5px solid #959fdfd8;
-    background: #656adf;
+    background: #40437f;
     box-shadow: inset 0px 1px 0px 5px #a8b1efbb;
   }
 }
